Java 14+ and small improvements